# MXO4-SigCapture

./: .gitignore  README.md  agent.md  pyproject.toml
.cursor/skills/rs-scpi-scopes/: Folder_Structure.md  SKILL.md
.cursor/skills/rs-scpi-scopes/references/: rs-scpi.snap.md
.memnet/: lib_wire.txt  mxo4_scpi.snap  mxo4_scpi_wire.json  skill_matrix.snap.md
docs/reference/: _manual_extract.txt  _mxo4_scpi_commands.json
examples/: catalog_browse.py  catalog_demo.py  remote_session.py  waveform_capture_scpi.py
scripts/: build_scpi_catalog.py  build_scpi_lib.py  capture_once.py  gen_agent_md.py  gen_memnet_lib_wire.py  memnet_load_skill_matrix.py  memnet_scpi_lib_snap.py  plot_h5.py
src/mxo4_sigcapture/: __init__.py
src/mxo4_sigcapture/apps/gui/: __main__.py  controller.py  main_window.py  theme.py  worker.py
src/mxo4_sigcapture/apps/gui/widgets/: acquisition_bar.py  channel_cell.py  channel_strip.py  connection_bar.py  dirty_indicator.py  graticule_plot.py  (+3 more)
src/mxo4_sigcapture/capture/: __init__.py  fetch.py  header.py  service.py  setup.py
src/mxo4_sigcapture/config/: __init__.py  acquire.py  app.py  horizontal.py  trigger.py  vertical.py
src/mxo4_sigcapture/connection/: __init__.py
src/mxo4_sigcapture/formatting/: __init__.py  units.py
src/mxo4_sigcapture/scpi/: __init__.py  catalog.py  cli.py  connection.py  errors.py  rs_transport.py  session.py  types.py
src/mxo4_sigcapture/scpi/data/: catalog.json  commands.json  manifest.json
src/mxo4_sigcapture/storage/: __init__.py  hdf5.py
tests/: test_hdf5.py  test_header.py  test_setup.py
